--- a/package.json
+++ b/package.json
@@ -11,14 +11,20 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.3.3",
+    "@angular/cdk": "^13.3.3",
     "@angular/common": "~13.3.3",
     "@angular/compiler": "~13.3.3",
     "@angular/core": "~13.3.3",
     "@angular/forms": "~13.3.3",
+    "@angular/material": "^13.3.3",
     "@angular/platform-browser": "~13.3.3",
     "@angular/platform-browser-dynamic": "~13.3.3",
+    "@angular/platform-server": "^13.3.3",
     "@angular/router": "~13.3.3",
+    "@ngrx/effects": "^13.1.0",
+    "@ngrx/store": "^13.1.0",
     "rxjs": "~7.4.0",
+    "rxjs-compat": "^6.6.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
