--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
     "@angular/platform-browser-dynamic": "~13.3.3",
     "@angular/platform-server": "^13.3.3",
     "@angular/router": "~13.3.3",
+    "@ng-bootstrap/ng-bootstrap": "^12.0.2",
     "@ngrx/effects": "^13.1.0",
     "@ngrx/store": "^13.1.0",
+    "bootstrap": "^5.1.3",
     "rxjs": "~7.4.0",
     "rxjs-compat": "^6.6.7",
-    "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -40,6 +41,7 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "tslib": "^2.3.1",
     "typescript": "~4.4.3"
   }
 }
