--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ngrx/effects": "^13.1.0",
     "@ngrx/store": "^13.1.0",
     "bootstrap": "^5.1.3",
+    "ng-in-viewport": "^13.0.1",
     "rxjs": "~7.4.0",
     "rxjs-compat": "^6.6.7",
     "zone.js": "~0.11.4"
