--- a/package.json
+++ b/package.json
@@ -10,30 +10,30 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.3.3",
+    "@angular/animations": "^14.2.12",
     "@angular/cdk": "^13.3.3",
-    "@angular/common": "~13.3.3",
-    "@angular/compiler": "~13.3.3",
-    "@angular/core": "~13.3.3",
-    "@angular/forms": "~13.3.3",
+    "@angular/common": "^14.2.12",
+    "@angular/compiler": "^14.2.12",
+    "@angular/core": "^14.2.12",
+    "@angular/forms": "^14.2.12",
     "@angular/material": "^13.3.3",
-    "@angular/platform-browser": "~13.3.3",
-    "@angular/platform-browser-dynamic": "~13.3.3",
-    "@angular/platform-server": "^13.3.3",
-    "@angular/router": "~13.3.3",
-    "@ng-bootstrap/ng-bootstrap": "^12.0.2",
-    "@ngrx/effects": "^13.1.0",
-    "@ngrx/store": "^13.1.0",
+    "@angular/platform-browser": "^14.2.12",
+    "@angular/platform-browser-dynamic": "^14.2.12",
+    "@angular/platform-server": "^14.2.12",
+    "@angular/router": "^14.2.12",
+    "@ng-bootstrap/ng-bootstrap": "^13.1.1",
+    "@ngrx/effects": "^14.3.3",
+    "@ngrx/store": "^14.3.3",
     "bootstrap": "^5.1.3",
     "ng-in-viewport": "^13.0.1",
-    "rxjs": "~7.4.0",
+    "rxjs": "~7.8.0",
     "rxjs-compat": "^6.6.7",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.12.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^13.3.3",
-    "@angular/cli": "~13.3.3",
-    "@angular/compiler-cli": "~13.3.3",
+    "@angular-devkit/build-angular": "^14.2.10",
+    "@angular/cli": "^14.2.10",
+    "@angular/compiler-cli": "^14.2.12",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.10.0",
@@ -43,6 +43,6 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "tslib": "^2.3.1",
-    "typescript": "~4.4.3"
+    "typescript": "~4.8.4"
   }
 }
