--- a/package.json
+++ b/package.json
@@ -10,39 +10,40 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.2.12",
-    "@angular/cdk": "^13.3.3",
-    "@angular/common": "^14.2.12",
-    "@angular/compiler": "^14.2.12",
-    "@angular/core": "^14.2.12",
-    "@angular/forms": "^14.2.12",
-    "@angular/material": "^13.3.3",
-    "@angular/platform-browser": "^14.2.12",
-    "@angular/platform-browser-dynamic": "^14.2.12",
-    "@angular/platform-server": "^14.2.12",
-    "@angular/router": "^14.2.12",
-    "@ng-bootstrap/ng-bootstrap": "^13.1.1",
-    "@ngrx/effects": "^14.3.3",
-    "@ngrx/store": "^14.3.3",
-    "bootstrap": "^5.1.3",
-    "ng-in-viewport": "^13.0.1",
+    "@angular/animations": "^15.2.1",
+    "@angular/cdk": "^15.2.1",
+    "@angular/common": "^15.2.1",
+    "@angular/compiler": "^15.2.1",
+    "@angular/core": "^15.2.1",
+    "@angular/forms": "^15.2.1",
+    "@angular/localize": "15.2.1",
+    "@angular/material": "^15.2.1",
+    "@angular/platform-browser": "^15.2.1",
+    "@angular/platform-browser-dynamic": "^15.2.1",
+    "@angular/platform-server": "^15.2.1",
+    "@angular/router": "^15.2.1",
+    "@ng-bootstrap/ng-bootstrap": "^14.0.1",
+    "@ngrx/effects": "^15.3.0",
+    "@ngrx/store": "^15.3.0",
+    "bootstrap": "^5.2.3",
+    "ng-in-viewport": "15.0.1",
     "rxjs": "~7.8.0",
     "rxjs-compat": "^6.6.7",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.2.10",
-    "@angular/cli": "^14.2.10",
-    "@angular/compiler-cli": "^14.2.12",
-    "@types/jasmine": "~3.10.0",
-    "@types/node": "^12.11.1",
-    "jasmine-core": "~3.10.0",
-    "karma": "~6.3.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
-    "tslib": "^2.3.1",
-    "typescript": "~4.8.4"
+    "@angular-devkit/build-angular": "^15.2.1",
+    "@angular/cli": "^15.2.1",
+    "@angular/compiler-cli": "^15.2.1",
+    "@types/jasmine": "~4.3.1",
+    "@types/node": "^18.14.6",
+    "jasmine-core": "~4.5.0",
+    "karma": "~6.4.1",
+    "karma-chrome-launcher": "~3.1.1",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.0.0",
+    "tslib": "^2.5.0",
+    "typescript": "~4.9.5"
   }
 }
