--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,11 @@
   "compileOnSave": false,
   "compilerOptions": {
     "baseUrl": "./",
-    "paths": {
-      "tslib" : ["./node_modules/tslib/tslib.d.ts"]
-    },
+    // "paths": {
+    //   "tslib": [
+    //     "./node_modules/tslib/tslib.d.ts"
+    //   ]
+    // },
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
     "strict": true,
@@ -19,12 +21,13 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "es2020",
+    "target": "ES2022",
     "module": "es2020",
     "lib": [
       "es2020",
       "dom"
-    ]
+    ],
+    "useDefineForClassFields": false
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
